# mccd

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  LICENCE.txt  README.md  about.html  changelog.html  citing.html  config_MCCD.ini  configure.sh  contributing.html  develop.txt  genindex.html  index.html  installation.html  mccd.auxiliary_fun.html  mccd.dataset_generation.html  mccd.grads.html  mccd.html  mccd.info.html  mccd.mccd.html  mccd.mccd_utils.html  mccd.proxs.html  mccd.utils.html  modules.html  objects.inv  py-modindex.html  pypi_pkg_info.rst  quickstart.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  toc.html  z_ref.html
.doctrees/: about.doctree  changelog.doctree  citing.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  mccd.auxiliary_fun.doctree  mccd.dataset_generation.doctree  mccd.doctree  mccd.grads.doctree  mccd.info.doctree  mccd.mccd.doctree  mccd.mccd_utils.doctree  mccd.proxs.doctree  mccd.utils.doctree  modules.doctree  quickstart.doctree  toc.doctree  z_ref.doctree
_modules/: index.html
_sources/: changelog.rst.txt  index.rst.txt  installation.rst.txt  mccd.auxiliary_fun.rst.txt  mccd.grads.rst.txt  mccd.info.rst.txt  mccd.mccd.rst.txt  mccd.mccd_utils.rst.txt  mccd.proxs.rst.txt  mccd.rst.txt  mccd.utils.rst.txt  modules.rst.txt  toc.rst.txt
docs/: requirements.txt
example/: __init__.py  auxiliary_fun.py  dataset_generation_parallel.py  fix_old_calidation_star_catalogue.py  math.py
mccd/: __init__.py  auxiliary_fun.py  grads.py  info.py  (+5 more)
(+70 files in other folders)
