[aliases]
test=pytest

[build_sphinx]
all_files=1
build-dir=docs/build

[metadata]
description-file = README.md

[pycodestyle]
ignore = E121,E126,E128,E402,W504,E127,E502,E131,E731
statistics = True

[tool:pytest]
addopts = --verbose --pycodestyle --cov=mccd
testpaths =
    mccd
    tests
norecursedirs = tests/*
